# MATHIR

./: .gitignore  AGENT.md  Activez  CHANGELOG.md  Entrainement  Interface  Logs  MATHIR_FINAL_REPORT.md  Onglet  README.md  SEO_TAGS.md  benchmark_beir.py  benchmark_gpu_vec.py  benchmark_unified.py  capacity_log.json  check_schema.py  compile_paper.bat  config.json  daemon_stderr.txt  daemon_stdout.txt  dashboard.bat  dashboard_live.bat  dashboard_live.py  final_report_streamlit.py  generate_latex_proofs.py  index.html  install.bat  install.sh  mathir_best_params.json  mathir_gpu_vec.py  mathir_model.py  mathir_search.py  mathir_vec.py  mathir_vec_optimized.py  ollama_analyzer.py  optimize.bat  optimize_mathir.py  requirements.txt  setup.py  setup_cuda_env.bat  (+10 more)
mathir_mcp/: CHANGELOG.md  GLOBAL_INSTRUCTIONS.md  INSTALL_FOR_AGENTS.md  ONBOARDING.md  README.md  __init__.py  __main__.py  config_template.json  install.bat  install.sh  install_smart.py  mathir.bat  mathir_dashboard.sh  mcp_architecture.md  pyproject.toml
mathir_mcp/INSTALL/: INSTALL_LINUX.md  INSTALL_MACOS.md  INSTALL_WINDOWS.md  README.md  install_smart.py
mathir_mcp/INSTALL_FOR_AGENT/: AGENT.md  install.bat  install.sh  install_smart.py
mathir_mcp/INSTALL_FOR_DEV/: README.md  install_smart.py
mathir_mcp/brain/: README.md  mathir_inject_proxy.py  mathir_watchdog.py
mathir_mcp/config/: mathir.json
mathir_mcp/dev/: migrate_memory.py  smoke_decay.py  test_batch_recall.py  test_daemon_push.py  test_input_length_dos.py  test_lifecycle.py  test_memory_scale.py  test_security_fixes.py
mathir_mcp/docs/: AGENT.md  DAEMON.md  DASHBOARD_GUIDE.md  DIMENSIONS.md  GPU_SETUP.md
mathir_mcp/mathir_dropin/: config.py  exceptions.py  memory.py  simple.py  store.py
mathir_mcp/mathir_lib/: __init__.py  mathir_brain.py  mathir_cli.py  mathir_client.py  mathir_consolidate.py  mathir_daemon.py  mathir_dashboard.html  mathir_mcp_server.py  mathir_migrate.py  mathir_paths.py  mathir_proxy.py  mathir_search.py  mathir_server.py  mathir_spread.py  mathir_start.py  mathir_stats_server.py  mathir_update_check.py  mathir_updater.py  mathir_vec.py  mathir_watchdog.py
mathir_mcp/mimocode_templates/agents/: _MATHIR_INJECT.md
mathir_mcp/mimocode_templates/commands/: _MATHIR_INJECT.md
mathir_mcp/mimocode_templates/docs/: _MATHIR_INJECT.md
mathir_mcp/mimocode_templates/plugins/: mathir-auto-inject.ts
mathir_mcp/opencode/: README.md
mathir_mcp/opencode/agents/: _MATHIR_INJECT.md
mathir_mcp/opencode/commands/: _MATHIR_INJECT.md
mathir_mcp/opencode/docs/: _MATHIR_INJECT.md
mathir_mcp/opencode/skills/: _MATHIR_INJECT.md
mathir_mcp/opencode/skills-global/: _MATHIR_INJECT.md
mathir_mcp/opencode_templates/: AGENTS.md  README.md
mathir_mcp/opencode_templates/agents/: _MATHIR_INJECT.md
mathir_mcp/opencode_templates/commands/: _MATHIR_INJECT.md
mathir_mcp/opencode_templates/docs/: _MATHIR_INJECT.md
mathir_mcp/opencode_templates/plugins/: mathir-auto-inject.ts
mathir_mcp/opencode_templates/skills/: _MATHIR_INJECT.md
mathir_mcp/opencode_templates/skills-global/: _MATHIR_INJECT.md
mathir_mcp/template_injection_examples/: README.md
mathir_mcp/template_injection_examples/agents/: _MATHIR_INJECT.md
mathir_mcp/tests/: test_auth.py  test_decay.py  test_mathir_update.py  test_migration.py  test_module_tree.py
raspberry_jetson/: README.md  __init__.py  __main__.py  pyproject.toml  requirements.txt  setup.sh  start.sh
raspberry_jetson/benchmarks/: README.md  benchmark_edge.py  run_all.sh
raspberry_jetson/brain/: mathir_inject_proxy.py
raspberry_jetson/config/: edge.yaml  mathir.json
raspberry_jetson/docs/: GPU_VS_CPU.md  WHEN_TO_USE.md
raspberry_jetson/mathir_lib/: mathir_daemon.py  mathir_mcp_server.py  mathir_vec.py
raspberry_jetson/providers/: base.py
raspberry_jetson/scripts/: download_model.sh  setup.sh
(+493 files in other folders)
