[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathir-mcp"
version = "8.5.0"
description = "MATHIR Memory MCP Server - FastMCP-based cognitive memory for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.0",
    "numpy>=1.24",
    "fastmcp>=3.4.0",
    "torch>=2.0",
]
license = {text = "MIT"}

[project.scripts]
# MCP server (FastMCP, stdio, 17 tools)
mathir-mcp = "mathir_mcp.mathir_lib.mathir_mcp_server:main"
# CLI client (HTTP to unified server)
mathir-client = "mathir_mcp.mathir_lib.mathir_client:main"

[tool.setuptools]
packages = ["mathir_mcp", "mathir_mcp.mathir_lib", "brain"]

[tool.setuptools.package-dir]
"mathir_mcp" = "."
"mathir_mcp.mathir_lib" = "mathir_lib"
"brain" = "brain"
