[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathir-mcp"
version = "9.0.0"
description = "MATHIR — universal cognitive memory MCP server for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.0",
    "numpy>=1.24",
    "fastmcp>=3.4.0",
    "torch>=2.0",
]
license = {text = "MIT"}

[project.scripts]
mathir-mcp       = "mathir_mcp.mathir_lib.mathir_mcp_server:main"
mathir-server    = "mathir_mcp.mathir_lib.mathir_server:main"
mathir-client    = "mathir_mcp.mathir_lib.mathir_client:main"
mathir-migrate   = "mathir_mcp.mathir_lib.mathir_migrate:main"
mathir-brain     = "mathir_mcp.mathir_lib.mathir_brain:main"
mathir-dashboard = "mathir_mcp.mathir_lib.mathir_stats_server:main"

[tool.setuptools]
packages = ["mathir_mcp", "mathir_mcp.mathir_lib"]

[tool.setuptools.package-dir]
"mathir_mcp" = "."
"mathir_mcp.mathir_lib" = "mathir_lib"
