[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathir-mcp"
version = "8.5.1"
description = "MATHIR — universal cognitive memory MCP server for LLM agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Embedding + vector store
    "sentence-transformers>=2.2.0",
    "sqlite-vec>=0.1.0",
    "numpy>=1.24",
    "torch>=2.0",
    # HTTP server (daemon + dashboard) + production WSGI
    "flask>=3.0",
    "waitress>=3.0",
    # MCP server runtime
    "fastmcp>=3.4.0",
    # Universal LLM proxy (mathir_proxy.py)
    "aiohttp>=3.9",
    "requests>=2.31",
    # BM25 hybrid search (mathir_search.py)
    "rank-bm25>=0.2",
    # Process utilities (stale PID lock check in updater)
    "psutil>=5.9",
]
license = {text = "MIT"}

[project.scripts]
mathir-mcp       = "mathir_mcp.mathir_lib.mathir_mcp_server:main"
mathir-server    = "mathir_mcp.mathir_lib.mathir_server:main"
mathir-client    = "mathir_mcp.mathir_lib.mathir_client:main"
mathir-migrate   = "mathir_mcp.mathir_lib.mathir_migrate:main"
mathir-brain     = "mathir_mcp.mathir_lib.mathir_brain:main"
mathir-dashboard = "mathir_mcp.mathir_lib.mathir_stats_server:main"

[tool.setuptools]
packages = ["mathir_mcp", "mathir_mcp.mathir_lib"]

[tool.setuptools.package-dir]
"mathir_mcp" = "."
"mathir_mcp.mathir_lib" = "mathir_lib"
